--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:ts": "tslint 'src/**/*.ts' -e 'src/typings/**/*'",
     "postinstall": "npm run typings",
     "start": "npm run watch",
-    "stats": "export NODE_ENV='production' && webpack --env.target production --profile --json > tmp/stats.json",
+    "stats": "export NODE_ENV='production' && webpack --env.target production --profile --json > tmp/webpack-stats.json",
     "typings": "cd src && typings install",
     "watch": "export NODE_ENV='development' && webpack-dev-server --env.target development"
   },
@@ -45,6 +45,7 @@
     "@angular/core": "4.0.1",
     "@angular/platform-browser": "4.0.1",
     "@angular/platform-browser-dynamic": "4.0.1",
+    "@angular/router": "4.0.1",
     "core-js": "2.4.1",
     "niduscss-base": "1.0.1",
     "niduscss-elements-form": "1.3.0",
@@ -54,6 +55,8 @@
     "zone.js": "0.8.5"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "4.0.1",
+    "@ngtools/webpack": "1.3.0",
     "autoprefixer": "6.7.7",
     "babel-core": "6.24.0",
     "babel-eslint": "7.2.1",
@@ -74,7 +77,6 @@
     "pre-commit": "1.2.2",
     "stylelint": "7.9.0",
     "stylelint-config-niduscss": "1.0.0",
-    "ts-loader": "2.0.3",
     "tslint": "4.5.1",
     "tslint-config-nimedev": "1.0.0",
     "tslint-loader": "3.4.3",
