--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,7 @@
       "es2015",
       "dom"
     ],
+    "moduleResolution" : "node",
     "noUnusedLocals": true,
     "target": "es5",
     "sourceMap": true,
