--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-seed",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
     "build": "export NODE_ENV='production' && webpack --env.target production",
@@ -11,7 +11,7 @@
     "lint:ts": "tslint 'src/**/*.ts' -e 'src/typings/**/*'",
     "postinstall": "npm run typings",
     "start": "npm run watch",
-    "stats": "export NODE_ENV='production' && webpack --env.target production --profile --json > tmp/webpack-stats.json",
+    "stats": "export NODE_ENV='production' && webpack --env.target production --profile --json > webpack-stats.json && webpack-bundle-analyzer webpack-stats.json dist",
     "typings": "cd src && typings install",
     "watch": "export NODE_ENV='development' && webpack-dev-server --env.target development"
   },
@@ -85,6 +85,7 @@
     "typescript": "2.2.2",
     "typings": "2.1.0",
     "webpack": "2.3.2",
+    "webpack-bundle-analyzer": "2.3.1",
     "webpack-dev-server": "2.4.2",
     "webpack-kit-nimedev": "4.1.0",
     "webpack-merge": "4.1.0"
