--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-seed",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
     "build": "export NODE_ENV='production' && webpack --env.target production",
@@ -64,6 +64,7 @@
     "babel-eslint": "7.2.1",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-stage-1": "6.22.0",
+    "clean-webpack-plugin": "0.1.16",
     "eslint": "3.19.0",
     "eslint-config-nimedev-base": "2.4.1",
     "eslint-plugin-import": "2.2.0",
@@ -87,7 +88,7 @@
     "webpack": "2.3.3",
     "webpack-bundle-analyzer": "2.3.1",
     "webpack-dev-server": "2.4.2",
-    "webpack-kit-nimedev": "4.1.0",
+    "webpack-kit-nimedev": "5.0.0",
     "webpack-merge": "4.1.0"
   },
   "babel": {
