--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-seed",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
     "build": "export NODE_ENV='production' && webpack --env.target production",
@@ -63,6 +63,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "clean-webpack-plugin": "0.1.16",
+    "codelyzer": "3.0.1",
     "eslint": "3.19.0",
     "eslint-config-nimedev-base": "5.0.0",
     "eslint-plugin-import": "2.3.0",
@@ -79,7 +80,7 @@
     "stylelint": "7.10.1",
     "stylelint-config-niduscss": "1.0.0",
     "tslint": "5.4.0",
-    "tslint-config-nimedev": "3.0.0",
+    "tslint-config-nimedev-ng": "1.0.3",
     "tslint-loader": "3.5.3",
     "typescript": "2.3.4",
     "typings": "2.1.1",
