--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.4.0",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
-    "build": "npm run install:dev && export NODE_ENV='production' && webpack --env.target production",
+    "build": "npm run install:dev && npm run lint:ts && export NODE_ENV='production' && webpack --env.target production",
     "install:dev": "npm install --production=false",
     "lint": "npm run lint:css && npm run lint:js && npm run lint:ts",
     "lint:css": "stylelint 'src/**/*.css'",
@@ -53,44 +53,34 @@
     "@angular/compiler": "4.2.4",
     "@angular/compiler-cli": "4.2.4",
     "@angular/platform-browser-dynamic": "4.2.4",
-    "@ngtools/webpack": "1.4.2",
-    "autoprefixer": "7.1.1",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
+    "@ngtools/webpack": "1.5.0",
+    "autoprefixer": "7.1.2",
     "clean-webpack-plugin": "0.1.16",
-    "codelyzer": "3.1.1",
-    "eslint": "4.1.0",
+    "codelyzer": "3.1.2",
+    "eslint": "4.2.0",
     "eslint-config-nimedev-base": "5.1.0",
-    "eslint-plugin-import": "2.6.0",
+    "eslint-plugin-import": "2.7.0",
     "ip": "1.1.5",
     "opener": "1.4.3",
     "postcss-calc": "6.0.0",
     "postcss-color-function": "4.0.0",
     "postcss-custom-media": "6.0.0",
-    "postcss-custom-properties": "6.0.1",
+    "postcss-custom-properties": "6.1.0",
     "postcss-import": "10.0.0",
     "postcss-mixins": "6.0.1",
     "postcss-nested": "2.0.2",
-    "stylelint": "7.11.1",
+    "stylelint": "7.12.0",
     "stylelint-config-niduscss": "1.0.0",
-    "tslint": "5.4.3",
-    "tslint-config-nimedev-ng": "1.0.3",
+    "tslint": "5.5.0",
+    "tslint-config-nimedev-ng": "1.1.0",
     "tslint-loader": "3.5.3",
-    "typescript": "2.3.4",
+    "typescript": "2.4.1",
     "typings": "2.1.1",
-    "webpack": "3.0.0",
+    "webpack": "3.1.0",
     "webpack-bundle-analyzer": "2.8.2",
-    "webpack-dev-server": "2.5.0",
-    "webpack-kit-nimedev": "9.2.1",
+    "webpack-dev-server": "2.5.1",
+    "webpack-kit-nimedev": "11.0.1",
     "webpack-merge": "4.1.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-1"
-    ]
   },
   "eslintConfig": {
     "extends": "nimedev-base"
