--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -9,8 +9,7 @@
     "moduleResolution" : "node",
     "noUnusedLocals": true,
     "target": "es5",
-    "sourceMap": true,
-    "allowJs": true
+    "sourceMap": true
   },
   "exclude": [
     "typings"
