--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "4.0.1",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
-    "build": "npm run install:dev && npm run lint:ts && export NODE_ENV='production' && webpack --env.target production",
+    "build": "npm run install:dev && npm run build:prod",
+    "build:prod": "npm run lint:ts && export NODE_ENV='production' && webpack --env.target production",
     "install:dev": "npm install --production=false",
     "lint": "npm run lint:css && npm run lint:js && npm run lint:ts",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:js": "eslint . --ext js",
-    "lint:ts": "tslint 'src/**/*.ts' -e 'src/typings/**/*'",
-    "postinstall": "npm run typings",
+    "lint:ts": "tslint 'src/**/*.ts'",
     "start": "npm run watch",
     "stats": "export NODE_ENV='production' && webpack --env.target production --profile --json > webpack-stats.json && webpack-bundle-analyzer webpack-stats.json dist",
-    "typings": "cd src && typings install",
     "watch": "export NODE_ENV='development' && webpack-dev-server --env.target development"
   },
   "repository": {
@@ -54,6 +53,7 @@
     "@angular/compiler-cli": "4.3.1",
     "@angular/platform-browser-dynamic": "4.3.1",
     "@ngtools/webpack": "1.5.2",
+    "@types/node": "8.0.15",
     "autoprefixer": "7.1.2",
     "clean-webpack-plugin": "0.1.16",
     "codelyzer": "3.1.2",
@@ -75,10 +75,9 @@
     "tslint-config-nimedev-ng": "1.1.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.4.2",
-    "typings": "2.1.1",
     "webpack": "3.3.0",
     "webpack-bundle-analyzer": "2.8.3",
-    "webpack-dev-server": "2.6.0",
+    "webpack-dev-server": "2.5.1",
     "webpack-kit-nimedev": "12.0.0",
     "webpack-merge": "4.1.0"
   },
