--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-seed",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
     "build": "npm run install:dev && npm run build:prod",
@@ -31,8 +31,8 @@
   },
   "homepage": "https://github.com/nimedev/ng-seed#readme",
   "engines": {
-    "npm": ">=5.0.0",
-    "node": ">=6.10 <7.0.0"
+    "npm": ">=5.3.0",
+    "node": ">=8.1.4"
   },
   "dependencies": {
     "@angular/common": "4.3.2",
