Use postcss-niduscss config.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@angular/platform-browser-dynamic": "4.3.5",
     "@ngtools/webpack": "1.6.1",
     "@types/node": "8.0.24",
-    "autoprefixer": "7.1.2",
     "clean-webpack-plugin": "0.1.16",
     "codelyzer": "3.1.2",
     "eslint": "4.5.0",
@@ -61,18 +60,11 @@
     "eslint-plugin-import": "2.7.0",
     "ip": "1.1.5",
     "opener": "1.4.3",
-    "postcss-calc": "6.0.0",
-    "postcss-color-function": "4.0.0",
-    "postcss-custom-media": "6.0.0",
-    "postcss-custom-properties": "6.1.0",
-    "postcss-import": "10.0.0",
-    "postcss-mixins": "6.0.1",
-    "postcss-nested": "2.1.1",
+    "postcss-niduscss": "1.0.1",
     "stylelint": "8.0.0",
     "stylelint-config-niduscss": "1.0.1",
     "tslint": "5.6.0",
     "tslint-config-nimedev-ng": "2.0.0",
-    "tslint-loader": "3.5.3",
     "typescript": "2.4.2",
     "webpack": "3.5.5",
     "webpack-bundle-analyzer": "2.9.0",
