--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
   },
   "homepage": "https://github.com/nimedev/ng-seed#readme",
   "engines": {
-    "npm": ">=5.3.0",
+    "npm": ">=5.4.0",
     "node": ">=8.3.0"
   },
   "dependencies": {
-    "@angular/common": "4.3.6",
-    "@angular/core": "4.3.6",
-    "@angular/platform-browser": "4.3.6",
-    "@angular/router": "4.3.6",
-    "core-js": "2.5.0",
+    "@angular/common": "4.4.0-RC.0",
+    "@angular/core": "4.4.0-RC.0",
+    "@angular/platform-browser": "4.4.0-RC.0",
+    "@angular/router": "4.4.0-RC.0",
+    "core-js": "2.5.1",
     "niduscss-base": "1.0.1",
     "niduscss-elements-form": "2.0.0",
     "niduscss-elements-link": "1.1.1",
@@ -48,28 +48,26 @@
     "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@angular/compiler": "4.3.6",
-    "@angular/compiler-cli": "4.3.6",
-    "@angular/platform-browser-dynamic": "4.3.6",
+    "@angular/compiler": "4.4.0-RC.0",
+    "@angular/compiler-cli": "4.4.0-RC.0",
+    "@angular/platform-browser-dynamic": "4.4.0-RC.0",
     "@ngtools/webpack": "1.6.2",
-    "@types/node": "8.0.25",
+    "@types/node": "8.0.26",
     "clean-webpack-plugin": "0.1.16",
     "codelyzer": "3.1.2",
-    "eslint": "4.5.0",
+    "eslint": "4.6.1",
     "eslint-config-nimedev-base": "5.2.0",
     "eslint-plugin-import": "2.7.0",
     "ip": "1.1.5",
     "opener": "1.4.3",
-    "postcss-niduscss": "1.0.1",
+    "postcss-niduscss": "1.0.2",
     "stylelint": "8.0.0",
     "stylelint-config-niduscss": "1.0.1",
-    "tslint": "5.6.0",
+    "tslint": "5.7.0",
     "tslint-config-nimedev-ng": "2.0.0",
-    "typescript": "2.4.2",
+    "typescript": "2.5.2",
     "webpack": "3.5.5",
-    "webpack-bundle-analyzer": "2.9.0",
-    "webpack-dev-server": "2.7.1",
-    "webpack-kit-nimedev": "12.0.5",
+    "webpack-kit-nimedev": "13.0.0",
     "webpack-merge": "4.1.0"
   },
   "eslintConfig": {
