[5.0.0][Breaking Change] Improve the development tools.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ng-seed",
-  "version": "4.5.0",
+  "version": "5.0.0",
   "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
   "scripts": {
     "build": "npm run install:dev && npm run lint:ts && NODE_ENV='production' webpack --env.target production",
     "install:dev": "npm install --production=false",
     "lint": "npm run lint:css && npm run lint:js && npm run lint:ts",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint:js": "eslint . --ext js",
-    "lint:ts": "tslint -c 'src/tslint.json' -p 'src/tsconfig.json' 'src/**/*.ts'",
+    "lint:js": "standard",
+    "lint:ts": "tslint -p 'src/tsconfig.json' 'src/**/*.ts'",
     "start": "NODE_ENV='development' webpack-dev-server --env.target development"
   },
   "repository": {
@@ -33,45 +33,47 @@
     "node": ">=8.3.0"
   },
   "dependencies": {
-    "@angular/common": "4.4.0-RC.0",
-    "@angular/core": "4.4.0-RC.0",
-    "@angular/platform-browser": "4.4.0-RC.0",
-    "@angular/router": "4.4.0-RC.0",
+    "@angular/common": "4.3.6",
+    "@angular/core": "4.3.6",
+    "@angular/platform-browser": "4.3.6",
+    "@angular/router": "4.3.6",
     "core-js": "2.5.1",
-    "niduscss-base": "1.0.1",
-    "niduscss-elements-form": "2.0.0",
-    "niduscss-elements-link": "1.1.1",
-    "niduscss-elements-typography": "1.1.2",
+    "normalize.css": "7.0.0",
     "rxjs": "5.4.3",
     "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@angular/compiler": "4.4.0-RC.0",
-    "@angular/compiler-cli": "4.4.0-RC.0",
-    "@angular/platform-browser-dynamic": "4.4.0-RC.0",
-    "@ngtools/webpack": "1.6.2",
-    "@types/node": "8.0.27",
+    "@angular/compiler": "4.3.6",
+    "@angular/compiler-cli": "4.3.6",
+    "@angular/platform-browser-dynamic": "4.3.6",
+    "@ngtools/webpack": "1.7.1",
+    "@types/node": "8.0.28",
     "clean-webpack-plugin": "0.1.16",
-    "codelyzer": "3.1.2",
-    "eslint": "4.6.1",
-    "eslint-config-nimedev-base": "5.2.0",
-    "eslint-plugin-import": "2.7.0",
+    "codelyzer": "3.2.0",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.28.7",
+    "exports-loader": "0.6.4",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
     "ip": "1.1.5",
-    "opener": "1.4.3",
-    "postcss-niduscss": "1.0.2",
+    "postcss-cssnext": "3.0.2",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.6",
+    "postcss-mixins": "6.1.0",
+    "postcss-nested": "2.1.2",
+    "standard": "10.0.3",
+    "style-loader": "0.18.2",
     "stylelint": "8.1.1",
-    "stylelint-config-niduscss": "1.0.1",
+    "stylelint-webpack-plugin": "0.9.0",
+    "svg-sprite-loader": "3.2.5",
     "tslint": "5.7.0",
-    "tslint-config-nimedev-ng": "2.0.0",
     "typescript": "2.5.2",
-    "webpack": "3.5.6",
-    "webpack-kit-nimedev": "13.2.0",
+    "url-loader": "0.5.9",
+    "webpack": "3.6.0",
+    "webpack-bundle-analyzer": "2.9.0",
+    "webpack-dev-server": "2.8.2",
     "webpack-merge": "4.1.0"
-  },
-  "eslintConfig": {
-    "extends": "nimedev-base"
-  },
-  "stylelint": {
-    "extends": "stylelint-config-niduscss"
   }
 }
