[6.0.0] Integrate with angular-cli.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "ng-seed",
-  "version": "5.0.1",
-  "description": "A starting point for building web applications with Angular using Webpack and PostCSS",
+  "version": "6.0.0",
+  "description": "A starting point for building web applications with Angular",
+  "private": true,
   "scripts": {
+    "start": "NODE_ENV='development' webpack-dev-server --env.target development",
     "build": "npm run install:dev && npm run lint:ts && NODE_ENV='production' webpack --env.target production",
-    "install:dev": "npm install --production=false",
+    "install:dev": "npm i --production=false",
     "lint": "npm run lint:css && npm run lint:js && npm run lint:ts",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:js": "standard",
-    "lint:ts": "tslint -p 'src/tsconfig.json' 'src/**/*.ts'",
-    "start": "NODE_ENV='development' webpack-dev-server --env.target development"
+    "lint:ts": "tslint -p 'tsconfig.json'",
+    "test": "karma start ./karma.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "e2e": "protractor ./protractor.conf.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +21,7 @@
   },
   "keywords": [
     "angular",
-    "typescript",
     "webpack",
-    "typings",
     "postcss"
   ],
   "author": "Nicolás Mejía Correa <nicolasmejiaco@gmail.com> (https://twitter.com/nimedev)",
@@ -30,50 +32,52 @@
   "homepage": "https://github.com/nimedev/ng-seed#readme",
   "engines": {
     "npm": ">=5.4.0",
-    "node": ">=8.3.0"
-  },
-  "dependencies": {
-    "@angular/common": "4.3.6",
-    "@angular/core": "4.3.6",
-    "@angular/platform-browser": "4.3.6",
-    "@angular/router": "4.3.6",
-    "core-js": "2.5.1",
-    "normalize.css": "7.0.0",
-    "rxjs": "5.4.3",
-    "zone.js": "0.8.17"
+    "node": ">=8.6.0"
   },
   "devDependencies": {
-    "@angular/compiler": "4.3.6",
-    "@angular/compiler-cli": "4.3.6",
-    "@angular/platform-browser-dynamic": "4.3.6",
-    "@ngtools/webpack": "1.7.1",
-    "@types/node": "8.0.28",
-    "clean-webpack-plugin": "0.1.16",
-    "codelyzer": "3.2.0",
-    "copy-webpack-plugin": "4.0.1",
-    "css-loader": "0.28.7",
-    "exports-loader": "0.6.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "html-loader": "0.5.1",
-    "html-webpack-plugin": "2.30.1",
-    "ip": "1.1.5",
-    "postcss-cssnext": "3.0.2",
-    "postcss-import": "11.0.0",
-    "postcss-loader": "2.0.6",
-    "postcss-mixins": "6.1.0",
-    "postcss-nested": "2.1.2",
-    "standard": "10.0.3",
-    "style-loader": "0.18.2",
-    "stylelint": "8.1.1",
-    "stylelint-webpack-plugin": "0.9.0",
-    "svg-sprite-loader": "3.2.5",
-    "tslint": "5.7.0",
-    "typescript": "2.5.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.6.0",
-    "webpack-bundle-analyzer": "2.9.0",
-    "webpack-dev-server": "2.8.2",
-    "webpack-merge": "4.1.0"
+    "@angular/cli": "^1.5.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/language-service": "^5.0.5",
+    "@types/jasmine": "^2.8.2",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^8.0.55",
+    "codelyzer": "^4.0.1",
+    "ip": "^1.1.5",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.6",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^2.1.2",
+    "protractor": "^5.2.0",
+    "source-map-loader": "^0.2.3",
+    "standard": "^10.0.3",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "2.4.2",
+    "webpack-kit-nimedev": "^14.1.0"
+  },
+  "dependencies": {
+    "@angular/animations": "^5.0.5",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "core-js": "^2.5.1",
+    "normalize.css": "^7.0.0",
+    "rxjs": "5.5.2",
+    "zone.js": "^0.8.18"
   }
 }
